--- a/public/index.html
+++ b/public/index.html
@@ -11,11 +11,14 @@
 </head>
 <body>
     <div class="container" id="root">
-        <div class="container-fluid" id="chat">
-            <input type="text">
-            <input type="button" value="Send">
+        <div class="container" id="chat">
+            <div>
+                    <input type="text">
+                    <input type="button" value="Send">
+            </div>
+            
         </div>
-        <div class="container-fluid" id="story">
+        <div class="container" id="story">
             <p>Island story will live here</p>
         </div>
     </div>
